<resources>
    <string name="app_name">Task Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complete_task">Completed tasks</string>
    <string name="priority_task">Sort by Priority</string>
    <string name="deadlinetask">Sort by Deadline</string>
    <string name="date">date</string>
    <string name="title">Title</string>
    <string name="task">Task</string>
    <string name="enter_valid_color_n_00251a">Enter Valid Color\n(#00251a)</string>
    <string name="_00251a">#00251a</string>
    <string name="priority">Priority : %1$d</string>
    <string name="take_a_note">Take a note</string>
    <string name="color">Color</string>
    <string name="congratulation_all_task_have_been_completed">Congratulation all task have been completed!!!</string>
    <string name="search_in_task">Search in Task</string>
    <string name="tasks">Tasks</string>
    <string name="search_your_tasks">Search your tasks</string>
    <string name="theme">Theme</string>
    <string name="no_search_found_for_you_query">No search found for you query</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="priority_label">Priority :</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">submit</string>
    <string name="login">Login</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="loginn">LogIn</string>
    <string name="signupp">Signup</string>

</resources>