<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/completeTask"
            android:text="@string/complete_task"

            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/priorityTask"
            android:text="@string/priority_task"
            android:layout_marginTop="8dp"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deadlineTask"
            android:text="@string/deadlinetask"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>
</layout>